# STIG_Script

./: .flake8  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  CODE_ANALYSIS_REPORT.md  DEV_QUICK_START.md  GUI_USAGE.md  MODULARIZATION_SPEC.md  MYASSET_dummy_xccdf.html  MYASSET_dummy_xccdf_poam.csv  MYASSET_updated.ckl  MYASSET_updated_2.ckl  README.md  STIG_Assessor.spec  STIG_Script.py  USER_MANUAL.md  analysis_results.md  build_portable.ps1  check_mini.ps1  check_ps.ps1  cisco_test.ckl  cisco_test.html  clean_core.py  create_dummy_xccdf.py  dummy_results.json  dummy_xccdf.xml  find_error.py  fix_flake8.py  generate_remediation.py  launch.ps1  launch.sh  launch_gui.bat  launch_web.bat  pylint_my_results.txt  pylint_results.txt  pylint_results2.txt  pylint_utf8.txt  pyproject.toml  requirements-dev.txt  scratch.ps1  (+14 more)
.github/workflows/: ci.yml
.stig_home/: test_repaired.ckl
.stig_home/.stig_assessor/: history.sqlite
.stig_home/test_extract/: Remediate.ps1  fixes.json  remediate.sh  remediate.yml
docs/: DEPLOYMENT_GUIDE.md  GUI_USAGE.md  MIGRATION_GUIDE.md  MODULARIZATION_SUMMARY.md  OPERATIONS_GUIDE.md  PORTABILITY_GUIDE.md  Remediation_Usage_Guide.html  STIG_Assessor_User_Manual.html  TEAM_7_README.md  USER_GUIDE.md  USER_MANUAL_FULL.md  analysis_results.md  build_docs.py  remediation_guide.html
docs/guides/: BOILERPLATE_USER_GUIDE.md  GUI_USAGE.md  MIGRATION_GUIDE.md  REMEDIATION_GUIDE.md  (+1 more)
examples/: README.md  example_remediation.csv  example_template.csv  server1.csv  server2.csv
fixes/: Remediate.ps1  fixes.json  remediate.sh  remediate.yml  remediation_playbook.html
fixes_test/: fixes.json  remediate.sh  remediate.yml
scripts/: build_html_manual.py  build_portable.py  bundle_scripts.ps1  fix_excepts.py  fix_flake8.py  fix_processor.py  fix_rem.py  generate_remediation.py  lint.py  lint2.py  package_release.ps1
stig_assessor/: __init__.py  __main__.py  cleanup.py  exceptions.py
test_fixes/: Remediate.ps1  dummy.xml  fixes.json  out.ps1  out.sh  out2.ps1  remediate.sh  remediate.yml
tests/: README.md  __init__.py  conftest.py  test_utils.py
(+426 files in other folders)
